<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.me.skidz.aplikacjanamojewesele.Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="100"
        >



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:maxHeight="0dp"
            android:maxWidth="150dp"
            android:layout_weight="20"
            android:scaleType="fitCenter"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/obraczki"
            />

        <Button
            android:id="@+id/butZdjWeselne"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fadingEdge="vertical"
            android:text="@string/zdjecie"
            android:layout_weight="15"
            />

        <Button
            android:id="@+id/butPrzejrzyjPlan"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fadingEdge="vertical"
            android:text="@string/plan"
            android:layout_weight="15"

            />

        <Button
            android:id="@+id/butQuiz"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fadingEdge="vertical"
            android:text="@string/quiz"
            android:layout_weight="15"
            />

        <ImageView
            android:id="@+id/zrobioneFoto"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_weight="20" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
